--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,15 @@
 			<artifactId>aliyun-java-sdk-dysmsapi</artifactId>
 			<version>2.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+			<version>2.4.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
