--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,19 @@ spring:
       url: jdbc:mysql://localhost:3306/reggie?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
       username: root
       password: 123456
+      #Redis相关配置
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    database: 0 #操作的是0号数据库
+    jedis:
+      #Redis连接池配置
+      pool:
+        max-active: 8 #最大连接数
+        max-wait: 1ms #连接池最大阻塞等待时间
+        max-idle: 4 #连接池中的最大空闲连接
+        min-idle: 0 #连接池中的最小空闲连接
+
 mybatis-plus:
   configuration:
     #在映射实体或者属性时，将数据库中表名和字段名中的下划线去掉，按照驼峰命名法映射
@@ -21,16 +34,3 @@ mybatis-plus:
 reggie:
   path: D:\img\
 
-  #Redis相关配置
-  redis:
-    host: localhost
-    port: 6379
-    #password: 123456
-    database: 0 #操作的是0号数据库
-    jedis:
-      #Redis连接池配置
-      pool:
-        max-active: 8 #最大连接数
-        max-wait: 1ms #连接池最大阻塞等待时间
-        max-idle: 4 #连接池中的最大空闲连接
-        min-idle: 0 #连接池中的最小空闲连接
